# SEV_ws

./: .gitignore  Dockerfile  README.md  entrypoint.sh
.devcontainer/: devcontainer.json
install/: local_setup.sh  setup.sh
install/path_recorder/share/path_recorder/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/point_cloud/share/ament_index/resource_index/package_run_dependencies/: point_cloud
install/point_cloud/share/ament_index/resource_index/parent_prefix_path/: point_cloud
install/point_cloud/share/point_cloud/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/point_cloud/share/point_cloud/cmake/: point_cloudConfig-version.cmake  point_cloudConfig.cmake
install/point_cloud/share/point_cloud/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
path_recorder/: setup.py
src/fast_point_cloud/: CMakeLists.txt  README.md  package.xml
src/fast_point_cloud/config/: cameras.yaml  nvblox_base.yaml  nvblox_dev.yaml  nvblox_jetson.yaml  perception.rviz  realsense_emitter_on.yaml  realsense_flashing.yaml  surround_view.yaml
src/fast_point_cloud/description/: sev.urdf.xacro
src/fast_point_cloud/launch/: bringup.launch.py  cameras.launch.py  foxglove.launch.py  nvblox.launch.py  rviz.launch.py  surround_view.launch.py  visual_slam.launch.py
src/fast_point_cloud/scripts/: camera_watchdog.py  surround_view_node.py  wait_for_stable_pose.py
src/path_recorder/: package.xml  setup.cfg
src/path_recorder/path_recorder/: path_recorder_node.py
src/point_cloud/: CMakeLists.txt  README.md
src/point_cloud/include/point_cloud/: point_cloud_fusion_node.hpp
src/point_cloud/launch/: fuse_pointclouds.launch.py  odometry.launch.py
src/point_cloud/src/: point_cloud_fusion_main.cpp  point_cloud_fusion_node.cpp
src/realsense_splitter/: package.xml
src/vectornav/config/: vectornav.yaml
src/websocket_bridge/: CMakeLists.txt  README.md  package.xml
src/websocket_bridge/config/: websocket_bridge.xml
src/websocket_bridge/include/: websocket_bridge.hpp
src/websocket_bridge/launch/: websocket_bridge.launch.py
src/websocket_bridge/src/: bridge_standalone.cpp  websocket_bridge.cpp
src/wheel_odom/: CMakeLists.txt  README.md  package.xml
src/wheel_odom/config/: udp_config.xml
src/wheel_odom/include/: SocketAddress.h  UdpSocket.h  odomPublisher.hpp
src/wheel_odom/launch/: wheel_odom.launch.py
src/wheel_odom/src/: SocketAddress.cpp  UdpSocket.cpp  odomPublisher.cpp  standalone_odomPublisher.cpp  udp_sender  udp_sender_test.cpp
ws_for_isaac/: DIRECTIONS.md
ws_for_isaac/workspaces/isaac_ros-dev/custom_docker/: Dockerfile.custom_packages
