<?xml version="1.0"?>
<package format="3">
  <name>wheel_odom</name>
  <version>0.0.1</version>
  <description>Wheel odometry publisher using UDP</description>

  <maintainer email="aaronmathewschips@gmail.com">Aaron_Mathews</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>